Fix spacing of code in accommodations.html

--- a/style.css
+++ b/style.css
@@ -403,8 +403,8 @@ section img {
 
 .content {
   /* margin: 11%; */
-    min-height: 100vh;
-
+    /* min-height: 100vh;
+ */
 }
 
 .info {
